--- a/themes/default/wisecrack/form.twig
+++ b/themes/default/wisecrack/form.twig
@@ -24,8 +24,7 @@
 			</div>
 		</div><!-- /.panel-body -->
 		<div class="panel-footer">
-			<a href="{{ base_url() }}admin/wisecrack/" class="hidden-print btn btn-primary"><span class="glyphicon glyphicon-arrow-left"></span> {% trans 'Back' %}</a>
 			<button type="submit" class="btn btn-success" id="form-button-save">{% trans 'Save' %}</button>
 		</div>
-	</div><!-- /.panel -->
+	</div>
 </form>
