--- a/themes/default/wisecrack/edit.twig
+++ b/themes/default/wisecrack/edit.twig
@@ -11,15 +11,6 @@
 {% endblock %}
 
 {% block documentready %}
-	IndigoAdmin.addProxyButton('{% trans 'Save' %}', 'save', '#form-button-save');
+	IndigoAdmin.addProxyButton('{% trans 'Save' %}', 'glyphicon glyphicon-save', '#form-button-save');
+	IndigoAdmin.addFastButton('{% trans 'Back' %}', 'glyphicon glyphicon-arrow-left', '{{ base_url() }}admin/wisecrack/');
 {% endblock %}
-
-{% if val.error_message() %}
-	{% block error_flash %}
-		<ul>
-			{% for item in val.error_message() %}
-				<li>{{ item }}</li>
-			{% endfor %}
-		</ul>
-	{% endblock %}
-{% endif %}
