--- a/themes/default/wisecrack/list.twig
+++ b/themes/default/wisecrack/list.twig
@@ -34,7 +34,7 @@
 			{{ block('_filter') }}
 		</tfoot>
 	</table>
-</div><!-- /.panel -->
+</div>
 
 {% if auth_has_access('wisecrack.create') %}
 	<p>
