--- a/themes/default/wisecrack/form.twig
+++ b/themes/default/wisecrack/form.twig
@@ -1,5 +1,5 @@
-<form action="{{ base_url() }}admin/wisecrack/{{ action }}/{{ action == 'create' ? '' : model.id }}" class="form-horizontal" method="post" role="form">
-	<div class="panel panel-{{ action == 'create' ? 'success' : 'info' }}">
+<form action="{{ base_url() }}admin/wisecrack/{{ request().action }}/{{ request().action == 'create' ? '' : model.id }}" class="form-horizontal" method="post" role="form">
+	<div class="panel panel-{{ request().action == 'create' ? 'success' : 'info' }}">
 		<div class="panel-heading">
 			<div class="panel-title">{% trans 'Wisecrack details' %}</div>
 		</div>
@@ -19,10 +19,10 @@
 			<div class="form-group">
 				<label for="inputBody" class="col-sm-2 control-label">{% trans 'Body' %}</label>
 				<div class="col-sm-10">
-					<textarea name="body" value="{{ model.body }}" class="form-control" id="inputBody" style="max-width: 100%; min-width: 50%; min-height: 70px;" placeholder="{% trans 'Body' %}" required></textarea>
+					<textarea name="body" class="form-control" id="inputBody" style="max-width: 100%; min-width: 50%; min-height: 70px;" placeholder="{% trans 'Body' %}" required>{{ model.body }}</textarea>
 				</div>
 			</div>
-		</div><!-- /.panel-body -->
+		</div>
 		<div class="panel-footer">
 			<button type="submit" class="btn btn-success" id="form-button-save">{% trans 'Save' %}</button>
 		</div>
